Fix not dragable columns issue on IE browser.

--- a/src/themes/material.scss
+++ b/src/themes/material.scss
@@ -138,7 +138,8 @@
       font-weight: 500;
 
       .datatable-header-cell-wrapper {
-        position: relative;
+				position: relative;
+				z-index: 100;
       }
 
 			&.longpress {
